Created Bio, Faves components for Teacher page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="http://allfont.net/allfont.css?fonts=origicide" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Monoton|Press+Start+2P" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Monoton|Press+Start+2P|Tajawal" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
